--- a/templates/main/NoticeFaq.html
+++ b/templates/main/NoticeFaq.html
@@ -29,15 +29,67 @@
                                                         <svg viewBox="0 0 17 17" style="width: 18px; height: 18px; display: block; fill: rgba(55, 53, 47, 0.4); flex-shrink: 0; backface-visibility: hidden; flex-grow: 0; margin-right: 10px;"><path d="M6.78027 13.6729C8.24805 13.6729 9.60156 13.1982 10.709 12.4072L14.875 16.5732C15.0684 16.7666 15.3232 16.8633 15.5957 16.8633C16.167 16.8633 16.5713 16.4238 16.5713 15.8613C16.5713 15.5977 16.4834 15.3516 16.29 15.1582L12.1504 11.0098C13.0205 9.86719 13.5391 8.45215 13.5391 6.91406C13.5391 3.19629 10.498 0.155273 6.78027 0.155273C3.0625 0.155273 0.0214844 3.19629 0.0214844 6.91406C0.0214844 10.6318 3.0625 13.6729 6.78027 13.6729ZM6.78027 12.2139C3.87988 12.2139 1.48047 9.81445 1.48047 6.91406C1.48047 4.01367 3.87988 1.61426 6.78027 1.61426C9.68066 1.61426 12.0801 4.01367 12.0801 6.91406C12.0801 9.81445 9.68066 12.2139 6.78027 12.2139Z"></path></svg>
                                                         <input placeholder="공지사항 & 자주 묻는 질문" type="text" class="searchInput" value>
                                                     </div>
+                                                    <!-- 검색어 입력하면 뜨는 창 -->
                                                     <section class="modalSearchContents">
                                                         <div role="button" tabindex="0" class="searchContent">
                                                             <div class="contentTextWrapper">
-                                                                <div class="searchTextIcon"></div>
-                                                                <div class="searchTextContent"></div>
-                                                                <div class="searchTextButton"></div>
+                                                                <div class="searchTextIcon">
+                                                                    <div class="notionRecordIcon">
+                                                                        <div class="modalSearchIcon">
+                                                                            <img class="notion-emoji modalLockIcon" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==">
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="searchTextContent">
+                                                                    <div class="searchTextTitle">
+                                                                        점핏 
+                                                                        <span class="searchWordEM">회원</span> 탈퇴하고 싶어요.
+                                                                    </div>
+                                                                    <div class="searchDetailWrapper">
+                                                                        <div class="searchTextDetail">
+                                                                            개발자 커리어 점프, 점핏! / 자주 묻는 질문 FAQ / 자주 묻는 질문 - 기업<span class="searchWordEM">회원</span> 
+                                                                            편 / 질문 리스트를 확인해보세요!
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="searchTextButton">
+                                                                    <svg viewBox="0 0 14 12" class="enter searchHoverButton"><path d="M4.45869 11.0605C4.83955 11.0605 5.09736 10.791 5.09736 10.4219C5.09736 10.2285 5.02119 10.0879 4.904 9.9707L3.41572 8.51758L2.39033 7.65625L3.74384 7.71484H11.0563C12.527 7.71484 13.154 7.05273 13.154 5.59961V2.125C13.154 0.654297 12.527 0.0214844 11.0563 0.0214844H7.80439C7.41181 0.0214844 7.13642 0.314453 7.13642 0.677734C7.13642 1.03516 7.41181 1.32812 7.79853 1.32812H11.027C11.613 1.32812 11.8649 1.58008 11.8649 2.16602V5.55859C11.8649 6.16211 11.613 6.4082 11.027 6.4082H3.74384L2.39033 6.47266L3.41572 5.60547L4.904 4.1582C5.02119 4.04102 5.09736 3.89453 5.09736 3.70117C5.09736 3.33789 4.83955 3.06836 4.45869 3.06836C4.29462 3.06836 4.11298 3.14453 3.98408 3.27344L0.626656 6.57812C0.49189 6.70703 0.421577 6.88281 0.421577 7.06445C0.421577 7.24023 0.49189 7.41602 0.626656 7.54492L3.98408 10.8555C4.11298 10.9844 4.29462 11.0605 4.45869 11.0605Z"></path></svg>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div role="button" tabindex="0" class="searchContent">
+                                                            <div class="contentTextWrapper">
+                                                                <div class="searchTextIcon">
+                                                                    <div class="notionRecordIcon">
+                                                                        <div class="modalSearchIcon">
+                                                                            <img class="notion-emoji modalEventIcon" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==">
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="searchTextContent">
+                                                                    <div class="searchTextTitle">
+                                                                        [당첨자 발표] 첫 입사지원 이벤트(12월 키보드)
+                                                                    </div>
+                                                                    <div class="searchDetailWrapper">
+                                                                        <div class="searchTextDetail">
+                                                                            개발자 커리어 점프, 점핏! / 공지사항 / [대한상공회의소]  / 공지사항 게시판
+                                                                        </div>
+                                                                        
+                                                                    </div>
+                                                                    <div class="searchTextMore">
+                                                                        대한상공회의소 KDT 훈련과정 인증 완료한 
+                                                                        <span class="searchWordEM">회원</span>
+                                                                        중, 12월에 첫 입사지원 한
+                                                                        <span class="searchWordEM">회원</span>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="searchTextButton">
+                                                                    <svg viewBox="0 0 14 12" class="enter searchHoverButton"><path d="M4.45869 11.0605C4.83955 11.0605 5.09736 10.791 5.09736 10.4219C5.09736 10.2285 5.02119 10.0879 4.904 9.9707L3.41572 8.51758L2.39033 7.65625L3.74384 7.71484H11.0563C12.527 7.71484 13.154 7.05273 13.154 5.59961V2.125C13.154 0.654297 12.527 0.0214844 11.0563 0.0214844H7.80439C7.41181 0.0214844 7.13642 0.314453 7.13642 0.677734C7.13642 1.03516 7.41181 1.32812 7.79853 1.32812H11.027C11.613 1.32812 11.8649 1.58008 11.8649 2.16602V5.55859C11.8649 6.16211 11.613 6.4082 11.027 6.4082H3.74384L2.39033 6.47266L3.41572 5.60547L4.904 4.1582C5.02119 4.04102 5.09736 3.89453 5.09736 3.70117C5.09736 3.33789 4.83955 3.06836 4.45869 3.06836C4.29462 3.06836 4.11298 3.14453 3.98408 3.27344L0.626656 6.57812C0.49189 6.70703 0.421577 6.88281 0.421577 7.06445C0.421577 7.24023 0.49189 7.41602 0.626656 7.54492L3.98408 10.8555C4.11298 10.9844 4.29462 11.0605 4.45869 11.0605Z"></path></svg>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </section>
+                                                    <!-- // 검색어 입력하면 뜨는 창 -->
                                                     <footer class="modalSearchFooter"></footer>
                                                 </div>
                                             </div> 
