기업 공고목록 작성중

--- a/templates/enterprise/mypage-info.html
+++ b/templates/enterprise/mypage-info.html
@@ -1121,7 +1121,7 @@
                                                     onkeyup="this.value=this.value.replace(/[^0-9]/g,'');">
                                             </td>
                                         </tr>
-                                        <tr>
+                                        <!-- <tr>
                                             <th scope="row" colspan="2">
                                                 대표 기업 로고
                                             </th>
@@ -1142,7 +1142,7 @@
                                                         / 수정</button>
                                                 </div>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <!-- WMG-35590 기업정보 개편/배경 이미지 사용 안함으로 제거 -->
                                         <!--            <tr>-->
                                         <!--                <th scope="row" rowspan="2" class="txtCenter">-->
@@ -1240,7 +1240,7 @@
                                                     style="width:450px">
                                             </td>
                                         </tr>
-                                        <tr>
+                                        <!-- <tr>
                                             <th scope="row" colspan="2">
                                                 기업 SNS
                                             </th>
@@ -1356,7 +1356,7 @@
                                                     </table>
                                                 </div>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <th scope="row" colspan="2">
                                                 설립일
@@ -1954,7 +1954,7 @@
                                         </tr>
                                         <tr>
                                             <th scope="row" colspan="2">
-                                                복리후생
+                                                사내복지
                                             </th>
                                             <td class="txtLeft">
                                                 <ul class="item_contents welfare_item_contents">
@@ -1968,7 +1968,7 @@
                                                 </div>
                                             </td>
                                         </tr>
-                                        <tr>
+                                        <!-- <tr>
                                             <th scope="row" colspan="2">
                                                 사내 동호회
                                             </th>
@@ -1983,7 +1983,7 @@
                                                         / 수정</button>
                                                 </div>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <th scope="row" colspan="2">
                                                 사업 내용
@@ -2712,7 +2712,7 @@
                                                 </div>
                                             </td>
                                         </tr>
-                                        <tr>
+                                        <!-- <tr>
                                             <th scope="row" colspan="2">
                                                 사내 근무환경
                                                 <br>
@@ -2935,8 +2935,8 @@
                                                     </ul>
                                                 </div>
                                             </td>
-                                        </tr>
-                                        <tr>
+                                        </tr> -->
+                                        <!-- <tr>
                                             <th scope="row" colspan="2">
                                                 기업 동영상(유튜브)
                                             </th>
@@ -2954,7 +2954,7 @@
                                                     이미지와 함께
                                                     노출됩니다.</span>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                     </tbody>
                                 </table>
                                 <div id="modal_help" class="modalWrap companyinfo_modal_wrap"
@@ -4815,7 +4815,7 @@
 
                         </div>
 
-                        <div class="box_noti">
+                        <div class="box_noti type2">
                             <ul class="list">
                                 <li>※ 저장완료한 이미지는 공고등록 &gt; 일반채용 &gt;
                                     직무형 공고 양식 내 기업/서비스 이미지에도 동일하게
@@ -4836,7 +4836,7 @@
                             <a href="#" id="main_company_data_edit_btn" class="btnSizeXL colorBlue">저장하기</a>
                         </div>
 
-                        <h2 class="non_blank">
+                        <!-- <h2 class="non_blank">
                             기업정보 FAQ
                         </h2>
                         <div class="companyinfo_modify">
@@ -4962,7 +4962,7 @@
                                     <button type="button" class="btn_open">click</button>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
 
                         <script type="text/javascript">
                             // 파일 선택
