--- a/static/css/enterprise/mypage-positionlist1.css
+++ b/static/css/enterprise/mypage-positionlist1.css
@@ -1,6 +1,179 @@
 @charset "UTF-8";
 @import"/publishing/static/css/enterprise/notosanskr.css";
 
+:root {
+    --black: #000;
+    --white: #fff;
+    --blue10: #f5f8ff;
+    --blue20: #f0f4ff;
+    --blue30: #e5ecff;
+    --blue40: #ccdaff;
+    --blue50: #a3bcff;
+    --blue60: #7a9fff;
+    --blue70: #5785ff;
+    --blue80: #4075ff;
+    --blue90: #2d67ff;
+    --blue100: #003fe5;
+    --blue110: #0031b2;
+    --blue120: #002585;
+    --gray10: #f8fafc;
+    --gray20: #f4f6fa;
+    --gray30: #eaedf4;
+    --gray40: #d7dce5;
+    --gray50: #b4c0d3;
+    --gray60: #96a0b5;
+    --gray70: #8491a7;
+    --gray80: #67738e;
+    --gray90: #5c667b;
+    --gray100: #475067;
+    --gray110: #373f57;
+    --gray120: #292e41;
+    --gray130: #151822;
+    --green10: #f3fffd;
+    --green20: #ebfffc;
+    --green30: #defaf6;
+    --green40: #aff4e5;
+    --green50: #7beed8;
+    --green60: #4fe5c7;
+    --green70: #00deb3;
+    --green80: #00d3ab;
+    --green90: #11be9a;
+    --green100: #17a187;
+    --green110: #2a7c6d;
+    --green120: #286258;
+    --greentemp: #00dd64;
+    --coral10: #fffafa;
+    --coral20: #fff5f7;
+    --coral30: #fce6e6;
+    --coral40: #fec5c5;
+    --coral50: #fea4a3;
+    --coral60: #ff837e;
+    --coral70: #ff7a72;
+    --coral80: #ff6d6a;
+    --coral90: #ff5656;
+    --coral100: #eb413f;
+    --coral110: #d63131;
+    --coral120: #b81d1d;
+    --orange10: #fffbf5;
+    --orange20: #fff7eb;
+    --orange30: #ffebcc;
+    --orange40: #ffd699;
+    --orange50: #ffc46b;
+    --orange60: #ffb84d;
+    --orange70: #ffa929;
+    --orange80: #ff9a03;
+    --orange90: #f09000;
+    --orange100: #e08700;
+    --orange110: #b86e00;
+    --orange120: #804d00;
+    --yellow10: #fffbeb;
+    --yellow20: #fff7d6;
+    --yellow30: #fff2b8;
+    --yellow40: #ffe885;
+    --yellow50: #ffe15f;
+    --yellow60: #ffdb3d;
+    --yellow70: #ffd41a;
+    --yellow80: #facb00;
+    --yellow90: #ebbf00;
+    --yellow100: #dbb200;
+    --yellow110: #ad8d00;
+    --yellow120: #755f00;
+    --forestGreen10: #f0fff6;
+    --forestGreen20: #e0ffed;
+    --forestGreen30: #c7ffdd;
+    --forestGreen40: #8affb9;
+    --forestGreen50: #57ff9a;
+    --forestGreen60: #00ff66;
+    --forestGreen70: #00e55c;
+    --forestGreen80: #00cc52;
+    --forestGreen90: #00be4c;
+    --forestGreen100: #00a843;
+    --forestGreen110: #008535;
+    --forestGreen120: #006629;
+    --skyBlue10: #f5fdff;
+    --skyBlue20: #ebfaff;
+    --skyBlue30: #dbf7ff;
+    --skyBlue40: #bdf0ff;
+    --skyBlue50: #99e8ff;
+    --skyBlue60: #70dfff;
+    --skyBlue70: #57d9ff;
+    --skyBlue80: #02c6ff;
+    --skyBlue90: #00b6eb;
+    --skyBlue100: #00a2d1;
+    --skyBlue110: #008ab2;
+    --skyBlue120: #006380;
+    --violet10: #fcfaff;
+    --violet20: #f8f5ff;
+    --violet30: #efe5ff;
+    --violet40: #deccff;
+    --violet50: #cbadff;
+    --violet60: #b185ff;
+    --violet70: #9d66ff;
+    --violet80: #8d4dff;
+    --violet90: #7224ff;
+    --violet100: #5a00fa;
+    --violet110: #4600c2;
+    --violet120: #2e0080;
+
+    /* 지하철 노선 */
+    /* 서울 */
+    --subwayLine101: #0052a4;
+    --subwayLine102: #34a344;
+    --subwayLine103: #ec611b;
+    --subwayLine104: #2995d6;
+    --subwayLine105: #7c38d6;
+    --subwayLine106: #ab4518;
+    --subwayLine107: #5e661f;
+    --subwayLine108: #df1c62;
+    --subwayLine109: #ca9a35;
+    --subwayLine201: #dd9520;
+    /* 수인분당 */
+    --subwayLine1101: #9c1b2c;
+    /* 신분당 */
+    --subwayLine901: #2c96df;
+    /* 공항철도 */
+    --subwayLine301: #6490c7;
+    /* 인천1호선 */
+    --subwayLine302: #ed8b00;
+    /* 인천2호선 */
+    --subwayLine1801: #395697;
+    /* 신림 */
+    --subwayLine1601: #7eb543;
+    /* 서해 */
+    --subwayLine1701: #8b651b;
+    /* 김포골드 */
+    --subwayLine1501: #bcb202;
+    /* 우이신설 */
+    --subwayLine203: #216ceb;
+    /* 경강선 */
+    --subwayLine202: #fe9132;
+    /* 의정부 */
+    --subwayLine1201: #159768;
+    /* 경춘 */
+    --subwayLine1301: #61aa5e;
+    /* 에버라인 */
+    --subwayLine1001: #66af90;
+    /* 경의중앙 */
+    --subwayLine303: #feb700;
+    /* 자기부상 */
+    /* 부산 */
+    --subwayLine401: #ec5430;
+    --subwayLine402: #34a344;
+    --subwayLine403: #b68748;
+    --subwayLine404: #3a66a9;
+    --subwayLine405: #74428f;
+    /* 부산김해 */
+    --subwayLine406: #5d95c8;
+    /* 동해 */
+    /* 대구 */
+    --subwayLine501: #ec5430;
+    --subwayLine502: #34a344;
+    --subwayLine503: #feb700;
+    /* 광주 */
+    --subwayLine601: #34a344;
+    /* 대전 */
+    --subwayLine801: #34a344;
+}
 
 html,
 body,
@@ -49,7 +222,7 @@ body {
     position: relative;
     min-width: 1080px;
     color: #000;
-    font-family: Noto Sans KR, sans-serif;
+    /* font-family: Noto Sans KR, sans-serif; */
     font-size: 14px;
     line-height: 1;
     background: #f4f4f4
@@ -532,7 +705,7 @@ button {
     line-height: 48px;
     font-size: 15px;
     text-align: center;
-    font-family: Noto Sans KR, sans-serif;
+    /* font-family: Noto Sans KR, sans-serif; */
     font-weight: 400
 }
 
@@ -548,11 +721,11 @@ button {
     transform-origin: center
 }
 
-.header .nav .link1:hover  .layer_link_con {
+.header .nav .link1:hover .layer_link_con {
     display: block
 }
 
-.header .nav  .link1:hover .ico_arr_toggle {
+.header .nav .link1:hover .ico_arr_toggle {
     transform: rotate(180deg)
 }
 
@@ -636,7 +809,7 @@ button {
     line-height: 48px;
     font-size: 15px;
     text-align: center;
-    font-family: Noto Sans KR, sans-serif;
+    /* font-family: Noto Sans KR, sans-serif; */
     font-weight: 400
 }
 
@@ -801,7 +974,7 @@ button {
     padding: 0 16px;
     line-height: 46px;
     text-align: center;
-    font-family: Noto Sans KR, sans-serif;
+    /* font-family: Noto Sans KR, sans-serif; */
     font-size: 15px;
     letter-spacing: -.5px;
     font-weight: 700;
@@ -920,3 +1093,131 @@ button {
 }
 
 /* 위는 기존 CSS */
+
+#content.basic {
+    margin: 0 auto;
+    width: 1260px;
+    background-color: white;
+}
+
+.main-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(245, 245, 248);
+}
+
+.container {
+    max-width: 1200px;
+    margin: auto;
+    background: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.register-btn {
+    background-color: var(--greentemp);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.columns {
+    display: flex;
+    gap: 20px;
+}
+
+.column {
+    flex: 1;
+    background: #ffffff;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.card-text-wrapper {
+    display: flex;
+    align-items: center
+}
+
+.card-text-wrapper>h2 {
+    margin-right: 10px;
+}
+
+.card-text-wrapper>h2:last-child {
+    color: rgb(191, 191, 191)
+}
+
+.card {
+    height: 100px;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.card>div:nth-child(1) {
+    font-size: 18px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    line-height: 1.3;
+}
+
+.card>div:nth-child(2) {
+    color: rgb(191, 191, 191);
+    margin-bottom: 15px;
+}
+
+
+
+.card-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    left: 20px;
+    bottom: 20px;
+    width: 100%;
+}
+
+.card-bottom div {
+    margin-right: auto;
+}
+
+.card-bottom svg {
+    margin-left: auto;
+}
+
+.card-bottom>svg>path {
+    fill: rgb(153, 153, 153);
+}
+.ongoing {
+    color: var(--greentemp);
+    background-color: rgb(230, 252, 240);
+}
+
+.pending {
+    color: var(--greentemp);
+    background-color: rgb(230, 252, 240);
+}
+
+.drafting {
+    color: var(--greentemp);
+    background-color: rgb(230, 252, 240);
+}
+
+.closed {
+    color: var(--greentemp);
+    background-color: rgb(230, 252, 240);
+}
+
+.editing{
+    color: rgb(239,194,113);
+    background-color: rgb(230, 252, 240);
+}
