사이드 화면 통합 및 모달창 추가

--- a/static/css/aside/applicantEvaluateRightBottom.css
+++ b/static/css/aside/applicantEvaluateRightBottom.css
@@ -18,6 +18,7 @@
 .sidebar .img-container {
     display: flex;
     justify-content: space-between;
+    margin-bottom:30px;
 }
 .sidebar .img-container .img-button {
     display: flex;
