--- a/templates/aside/applicantEvaluateRightBottom.html
+++ b/templates/aside/applicantEvaluateRightBottom.html
@@ -18,23 +18,26 @@
                     <img src="../../static/images/aside/thumbdown.png" />
                     <span>35</span>
                 </div>
-                <div class="img-button speechBubble">
-                    <img src="../../static/images/aside/speechBubble.png" />
+                <div class="img-button">
+                    <img class="speechBubble" src="../../static/images/aside/speechBubble.png" />
                     <span>평가</span>
                 </div>
             </div>
-            <div class="input-section">
-                <h2>평가 의견 작성</h2>
-                <textarea
-                    class="evaluate"
-                    placeholder="평가의견을 입력해주세요
+            <div class="dropdown">
+                <div class="input-section">
+                    <h2>평가 의견 작성</h2>
+                    <textarea
+                        class="evaluate"
+                        placeholder="평가의견을 입력해주세요
 (최대 100자)"
-                ></textarea>
-            </div>
-            <div class="submit-button">
-                <button style="cursor: not-allowed">등록</button>
+                    ></textarea>
+                </div>
+                <div class="submit-button">
+                    <button style="cursor: not-allowed">등록</button>
+                </div>
             </div>
         </div>
+        <div class="sidebar-modal-bottom-body"></div>
     </body>
     <script src="../../static/js/aside/applicantEvaluateRightBottom.js"></script>
 </html>
