--- a/templates/aside/applicantEvaluateRightTop.html
+++ b/templates/aside/applicantEvaluateRightTop.html
@@ -17,11 +17,20 @@
                 <p class="name">김점핏</p>
                 <img src="../../static/images/aside/whiteStar.png" />
             </div>
+            <div class="phone">
+                <img src="../../static/images/aside/phone.png" />
+                <span>01011111111</span>
+            </div>
+            <div class="mail">
+                <img src="../../static/images/aside/mail.png" />
+                <span>jumpit@jumpit.co.kr</span>
+            </div>
             <div class="buttons">
-                <button class="button pass">최종합격</button>
-                <button class="button fail">불합격</button>
+                <button class="pass">최종합격</button>
+                <button class="fail">불합격</button>
             </div>
         </div>
+        <div class="sidebar-modal-body"></div>
     </body>
     <script src="../../static/js/aside/applicantEvaluateRightTop.js"></script>
 </html>
