--- a/static/css/aside/applicantEvaluateRightTop.css
+++ b/static/css/aside/applicantEvaluateRightTop.css
@@ -8,6 +8,12 @@ body {
     padding: 16px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
+.sidebar button:hover,
+.sidebar .review button:hover {
+    background: rgb(0, 221, 109);
+    border: 1px solid rgb(0, 221, 109);
+    color: white;
+}
 .sidebar .head {
     display: flex;
     /* justify-content: flex-start; */
@@ -52,17 +58,18 @@ body {
     margin-left: -20px;
     cursor: pointer;
 }
-.mail, .phone {
+.mail,
+.phone {
     display: flex;
-    align-items: center; 
-    justify-content: flex-start; 
+    align-items: center;
+    justify-content: flex-start;
 }
-.sidebar .phone img{
+.sidebar .phone img {
     width: 20px;
     margin-left: 4px;
     margin-right: 10px;
 }
-.sidebar .mail img{
+.sidebar .mail img {
     width: 45px;
     margin-left: -10px;
 }
@@ -92,10 +99,81 @@ body {
     color: white;
     border-radius: 4px;
 }
-.sidebar button.fail, .sidebar button.cancel{
+.sidebar button.fail,
+.sidebar button.cancel {
     color: red;
 }
-
+.sidebar .review .middleText {
+    padding-left: 20px;
+}
+.sidebar .review .highlight-text {
+    color: rgb(0, 221, 109);
+    font-size: 18px;
+    margin-top: 10px;
+}
+.sidebar .review h1 {
+    font-size: 18px;
+    color: #333;
+}
+.sidebar .review p {
+    font-size: 14px;
+    color: #333;
+}
+.sidebar .review .highlight {
+    color: rgb(0, 221, 109);
+    font-weight: bold;
+}
+.sidebar .review .note1 {
+    font-size: 16px;
+    color: #111;
+    margin-top: 10px;
+}
+.sidebar .review .note2 {
+    font-size: 16px;
+    color: #444;
+    margin-top: 10px;
+}
+.sidebar .review .note3 {
+    font-size: 14px;
+    color: #888;
+    margin-top: 10px;
+}
+.sidebar .review .buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.sidebar .review button {
+    padding: 10px;
+    width: 48%;
+    padding: 15px;
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    margin: 20px 10px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 55px;
+    border-radius: 4px;
+}
+.sidebar .review button.clicked {
+    font-weight: 900;
+    background: rgb(0, 221, 109);
+    border: 1px solid rgb(0, 221, 109);
+    color: white;
+    border-radius: 4px;
+}
+.sidebar .review .circle::before {
+    content: "●";
+    position: relative;
+    margin-right: 5px;
+    left: 0px;
+    font-size: 10px;
+}
 
 /* 수수료 정산 요청하기 모달창 부분 */
 
@@ -106,12 +184,12 @@ body {
     align-items: center;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    position: fixed; 
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     display: none;
-    z-index: 999; 
+    z-index: 999;
 }
 .sidebar-modal {
     background: white;
@@ -180,17 +258,6 @@ body {
     display: flex;
     justify-content: space-between;
 }
-/* .sidebar-modal button {
-    flex: 1;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    font-weight: 700;
-    cursor: pointer;
-    height: 55px;
-} */
-
 .sidebar-modal button {
     padding: 10px;
     width: 48%;
@@ -208,6 +275,11 @@ body {
     height: 55px;
     border-radius: 4px;
 }
+.sidebar-modal button:hover {
+    background: rgb(0, 221, 109);
+    border: 1px solid rgb(0, 221, 109);
+    color: white;
+}
 .sidebar-modal button.clicked {
     font-weight: 900;
     background: rgb(0, 221, 109);
@@ -215,15 +287,6 @@ body {
     color: white;
     border-radius: 4px;
 }
-/* .sidebar-modal .cancel {
-    background: #ccc;
-} */
-/* .sidebar-modal .submit {
-    background: rgb(0, 221, 109);
-    border: 1px solid rgb(0, 221, 109);
-    color: white;
-    margin-left: 10px;
-} */
 .sidebar-modal .close-btn {
     position: absolute;
     top: 20px;
