--- a/static/css/aside/applicantmanagementleft.css
+++ b/static/css/aside/applicantmanagementleft.css
@@ -28,6 +28,11 @@ body {
     height: 55px;
     border-radius: 4px;
 }
+.sidebar button:hover {
+    background: rgb(0, 221, 109);
+    border: 1px solid rgb(0, 221, 109);
+    color: white;
+}
 .sidebar button span {
     margin-left: -35%;
 }
@@ -56,9 +61,9 @@ body {
 }
 .sidebar .triangle::before {
     content: "▶";
-    position: absolute;
-    left: 3%;
-    top: 50%;
+    position: relative;
+    left: -50%;
+    top: 30%;
     transform: translateY(-50%);
     font-size: 10px;
     line-height: 1;
@@ -69,8 +74,8 @@ body {
 }
 .sidebar .circle::before {
     content: "●";
-    position: absolute;
-    left: 20px;
+    position: relative;
+    left: -15px;
     top: 50%;
     transform: translateY(-50%);
     font-size: 10px;
