--- a/static/css/aside/positionregisterright.css
+++ b/static/css/aside/positionregisterright.css
@@ -31,6 +31,13 @@
     margin-bottom: 16px;
     border-radius: 4px;
 }
+.sidebar button.save:hover,
+.sidebar button.approve:hover,
+.sidebar button.delete:hover {
+    background: rgb(0, 221, 109);
+    border: 1px solid rgb(0, 221, 109);
+    color: rgb(255, 255, 255);
+}
 .sidebar button.save.clicked,
 .sidebar button.approve.clicked,
 .sidebar button.delete.clicked {
